--- a/about-crowned.html
+++ b/about-crowned.html
@@ -1,9 +1,10 @@
-about-crowned.html
+
 <!DOCTYPE html>
 <meta charset="utf-8">
 
 <meta name="viewport"  content="width=device-width, initial-scale=1.0">
 
+<rel="stylesheet" type="text/css" href="CustomerCrowned.css">
 <html>
 
 <head>
@@ -56,7 +57,7 @@ about-crowned.html
                                                     }
 
       header nav a                                  {
-                                                     font-size: 25px;
+                                                     font-size: 20px;
                                                      text-decoration: none;
 
                                                     }
@@ -109,6 +110,30 @@ about-crowned.html
                                                       }
                                }
 
+                               @media screen and (max-width:1300px) {#branding h1 {margin-bottom:0;
+                                                                                   align-items: center;
+                                                                                   justify-content: center;
+                                                                                   font-size: 35px;
+                                                                                }
+
+
+
+                        @media screen and (max-Width:1000px)         {#alltext  {
+                                                                                 flex-direction: column;
+                                                                                }
+                                      }
+
+                         @media screen and (max-Width:1000px)      {.text_2    {
+                                                                                width:90%;
+                                                                                margin-left:0px;
+                                                                                text-align:justify;
+                                                                               }
+                                      }
+
+
+
+                                                         }
+
     @media screen and (max-width:768px) {#branding img  {
                                                           display:flex;
                                                           justify-content: center;
@@ -126,17 +151,6 @@ about-crowned.html
 
 
 
-  @media screen and (max-Width:1000px)         {#alltext  {
-                                                           flex-direction: column;
-                                                          }
-                }
-
-   @media screen and (max-Width:1000px)      {.text_2    {
-                                                          width:90%;
-                                                          margin-left:0px;
-                                                          text-align:justify;
-                                                        }
-                }
 </style>
 
 </head>
