--- a/contact-crowned.html
+++ b/contact-crowned.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-
+<link rel="stylesheet" type="text/css" href="CustomerCrowned.css">
     <title></title>
     <style type="text/css">
 
@@ -74,7 +74,7 @@
                                                            margin:auto;
                                                           }
 
- form input                                               {
+              form input                                 {
                                                            Width:320px;
                                                            padding: 10px;
                                                            font-size:15px;
